Fix buttons wrapping on long folder names

--- a/apps/files/css/upload.scss
+++ b/apps/files/css/upload.scss
@@ -168,12 +168,20 @@
 .oc-dialog .fileexists #allfiles + span{
 	vertical-align: bottom;
 }
+
 .oc-dialog .oc-dialog-buttonrow {
 	width:100%;
 	text-align:right;
-}
-.oc-dialog .oc-dialog-buttonrow .cancel {
-	float:left;
+
+	button {
+	    white-space: nowrap;
+	    overflow: hidden;
+	    text-overflow: ellipsis;
+	}
+
+	.cancel {
+		float:left;
+	}
 }
 
 .highlightUploaded {
